test/tests/compiler/18_structures/invalid_parse/var_decl_bad_tag_1.plx
pub fn main(none) i32 {
    foo: struc 4;  # a struct tag must be an identifier (not a constant)
    return 0
}
